# python_custom_framework

./: .gitignore  README.md
gui_auto/: __init__.py  auto_gui_tool.py  auto_gui_tool_image.py  auto_gui_tool_window.py  pyproject.toml  readme.md  test_auto_gui_tool.py  test_refactoring.py  test_smart_scale.py
gui_auto/algorithms/: __init__.py  base.py  feature_matching.py  hybrid_matching.py  pyramid_matching.py  template_matching.py
gui_auto/core/: __init__.py  config.py  exceptions.py  logger.py
gui_auto/doc/: README.md  algorithms.md  core_modules.md  examples.md  main_class.md  operations.md  parameter_configuration.md  platform.md  quick_start.md  troubleshooting.md  utils.md
gui_auto/integration_test_results/reports/: comprehensive_report_20250926_135520.html  comprehensive_report_20250926_135700.html
gui_auto/operations/: __init__.py  base.py  click_operations.py  image_operations.py  keyboard_operations.py  window_operations.py
gui_auto/platform/: base.py
gui_auto/platform_utils/: __init__.py  linux.py  windows.py
gui_auto/utils/: __init__.py  coordinate_utils.py  format_utils.py  image_utils.py  retry_utils.py  scale_utils.py
