[project]
name = "gui-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.7.0",
    "rich>=14.1.0",
]
